kubernetes/infrastructure/controllers/argocd/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    pod-security.kubernetes.io/enforce: privileged
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
