kubernetes/infrastructure/controllers/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - argo.timourhomelab.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
          weight: 100
